--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -15,11 +15,7 @@
         <a href="#contactanos">{{ "headerfive" | translate }}</a>
         <span class="divisor">|</span>
         <div class="idioma">
-          <a href="
-          "(click)="switchLanguage('en')">Eng</a>
-          <a href="
-          "(click)="switchLanguage('es')">Esp</a>
-          <!-- <img
+          <img
             [src]="
               currentLanguage === 'en'
                 ? '../../../../assets/img/us-on.svg'
@@ -28,8 +24,8 @@
             alt=""
             class="us"
             (click)="switchLanguage('en')"
-          /> -->
-          <!-- <img
+          />
+          <img
             [src]="
               currentLanguage === 'es'
                 ? '../../../../assets/img/esp-on.png'
@@ -38,7 +34,7 @@
             alt=""
             class="esp"
             (click)="switchLanguage('es')"
-          /> -->
+          />
         </div>
       </div>
     </div>
