--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -74,7 +74,8 @@
           </ng-container>
         </div>
         <div class="video">
-          <button>{{ "Get" | translate }}</button>
+          <a href="#contactanos">{{ "Get" | translate }}</a>
+          <!-- <button href="#contactanos">{{ "Get" | translate }}</button> -->
           <img
             [src]="currentImages['img3']"
             alt=""
@@ -177,7 +178,7 @@
           </p>
         </div>
         <div class="completebutton">
-          <button>{{ "Get" | translate }}</button>
+          <a href="#contactanos">{{ "Get" | translate }}</a>
         </div>
       </div>
     </div>
@@ -284,10 +285,10 @@
             {{ "esproceso" | translate }}
           </p>
         </div>
-
         <div class="completebutton">
-          <button>{{ "Get" | translate }}</button>
+          <a href="#contactanos">{{ "Get" | translate }}</a>
         </div>
+
       </div>
     </div>
   </div>
