--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -337,18 +337,18 @@ h3{
             }
         }
 
-        button{
-            width: 40%;
+        a{
             padding: 1rem;
             border: solid 1px;
             border-color: #9595ff;
             border-radius: 50px;
             background-color: #5554F3;
-            /* color: #9595ff; */
             color: white;
             font-family: 'Poppins', sans-serif;
             margin-top: 32px;
             font-size: medium;
+            text-align: center;
+            text-decoration: none;
 
             @media (max-width: 900px){
                 width: 100%;
@@ -356,7 +356,7 @@ h3{
             }
         }
 
-        button:hover{
+        a:hover{
             opacity: 0.5;
             cursor: pointer;
         }
@@ -565,10 +565,33 @@ h3{
         }
 
         .completebutton{
-            button{
-                width: 100%;
+            margin-top: 2rem;
+             a{
+            padding: 1rem;
+            border: solid 1px;
+            border-color: #9595ff;
+            border-radius: 50px;
+            background-color: #5554F3;
+            color: white;
+            font-family: 'Poppins', sans-serif;
+            font-size: medium;
+            text-align: center;
+            text-decoration: none;
+            width: 90%;
+            display: flex;
+            justify-content: center;
 
+            @media (max-width: 900px){
+                width: 90%;
+                
             }
+        }
+
+        a:hover{
+            opacity: 0.5;
+            cursor: pointer;
+        }
+       
         }
 
         .frame4{
