--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -176,6 +176,12 @@ h3{
             align-items: center;
             cursor: pointer;
             justify-content: space-between;
+            /* font-size: 1.5rem; */
+            margin: 0;
+            font-weight: 400;
+            a{
+                margin: 5px;
+            }
 
             @media screen and (max-width: 900px){
                 margin-top: 20px;
