--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -124,7 +124,7 @@
 <div class="backgroundline">
   <div class="iconline">
     <img src="../../../../assets/Background/end-sect-one.png " alt="" />
-    <img class="line" src="../../../../assets/Icon/icons.png" alt="" />
+    <img class="line" src="../../../../assets/Icon/icons.svg" alt="" />
   </div>
 </div>
 
@@ -240,11 +240,11 @@
        
             <span class="TitleBold3">{{
               "sugerencias" | translate
-            }}</span><br />
+            }}</span>
          
             <span class="TitleBold3">{{
               "soporterespuestas" | translate
-            }}</span><br />
+            }}</span>
           <div class="division">
             <span class="TitleBold3">Open AI</span>
             <span class="TitleBold3">CloudFlrare</span>
