--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -628,14 +628,14 @@ h3{
             }
 
             span{
-                background-color: white;
+                background-color: #F3F2FF;
                 color: #5554F3;
                 border: solid 1px;
                 border-color:#5554F3;
                 border-radius: 50px;
                 padding: 5px;
                 margin-left: 5px;
-                width: 100%;
+                width: 95%;
                 margin-top: 5px;
                 text-align: center;
                 
