--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -7,6 +7,14 @@
     <div class="section-header">
       <img class="chatbetone" src="./assets/Icon/Layer_1.png" alt="" />
       <img class="chatbet" src="../../../../assets/img/Frame0.png" alt="" />
+      <div class="newidioma">
+        <a href="" (click)="switchLanguage('en')">
+          En
+        </a>
+        <a href="" (click)="switchLanguage('es')">
+          Es
+        </a>
+      </div>
       <div class="navbar">
         <a href="#funciones">{{ "headerone" | translate }}</a>
         <a href="#beneficios">{{ "headertwo" | translate }}</a>
