--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -139,7 +139,30 @@ h3{
             display: none;
           }
         }
+
+        .newidioma{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-top: 10px;
+            a{
+                margin: 5px;
+                color: white;
+                text-decoration: none;
+                font-family: "Poppins", sans-serif;
+                font-size: 1.2rem;
+                font-weight: 600;
+
+                &:hover{
+                    color: #9595ff;
+                }
+            }
+            @media screen and (min-width: 900px){
+                display: none;
+            }
+        }
     }
+
 
     .navbar{
         display: flex;
