--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -124,11 +124,23 @@ h3{
         padding: 10px;
         align-items: center;
 
+        .phonediv{
+            display: flex;
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+       
+        @media screen and (min-width: 900px){
+            display: none;
+        }
+        }
+
         @media screen and (max-width: 900px){
             align-items: center;
             justify-content: center;
             flex-direction: column;
             
+        
           .chatbetone{
             display: none;
           }
@@ -143,8 +155,10 @@ h3{
         .newidioma{
             display: flex;
             align-items: center;
+            justify-content: center;
+            text-align: center;
             justify-content: space-between;
-            margin-top: 10px;
+            margin-left: 15px;
             a{
                 margin: 5px;
                 color: white;
