--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -6,11 +6,13 @@
   <header>
     <div class="section-header">
       <img class="chatbetone" src="./assets/Icon/Layer_1.png" alt="" />
+      
       <img class="chatbet" src="../../../../assets/img/Frame0.png" alt="" />
       <div class="newidioma">
         <a href="" (click)="switchLanguage('en')">
           En
         </a>
+        <a href="">|</a>
         <a href="" (click)="switchLanguage('es')">
           Es
         </a>
