--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -59,7 +59,7 @@
   <div class="first-section">
     <div class="gif2">
       <img
-        src="../../../../assets/img/phone-tlf.svg"
+        src="../../../../assets/img/phone-tlf.png"
         alt=""
         style="margin-top: 0"
       />
