--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -271,7 +271,7 @@ h3{
                     width: 100%;
                     height: auto;
                      object-fit: contain;  
-                     /* margin-bottom: -110px      */
+                     margin-bottom: -110px     
                 }
 
 
