--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -263,7 +263,7 @@
             
           </div>
           
-            <span class="TitleBold3">{{ "ofertas" | translate }}</span><br />
+            <span class="TitleBold3">{{ "ofertas" | translate }}</span>
           
             <span class="TitleBold3">{{ "noticias" | translate }}</span>
           
