--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -667,8 +667,7 @@ h3{
             span{
                 background-color: #F3F2FF;
                 color: #5554F3;
-                border: solid 1px;
-                border-color:#5554F3;
+                margin: 8px;
                 border-radius: 50px;
                 padding: 5px;
                 margin-left: 5px;
