--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -271,7 +271,7 @@
       </div>
 
       <div class="frame4" style="display: flex">
-        <img src="../../../../assets/img/Frame4.svg" alt="" />
+        <img [src]="currentImages['Frame4']" alt="" />
       </div>
     </div>
   </div>
