--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -316,7 +316,8 @@
   </div>
 
   <div class="reviewphone">
-    <img src="../../../../assets/Background/carrusel.png" alt="" />
+    <img [src]="currentImages['reviewphone']" alt="" />
+
   </div>
 </div>
 
