--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -270,7 +270,7 @@ h3{
                 img{
                     width: 100%;
                     height: auto;
-                     object-fit: contain;  
+                     object-fit: cover;  
                      margin-bottom: -110px     
                 }
 
