--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -59,7 +59,7 @@
   <div class="first-section">
     <div class="gif2">
       <img
-        [src]="currentImages['phone']"
+        [src]="currentImages['phoneimage']"
         alt=""
         style="margin-top: 0"
       />
@@ -316,7 +316,7 @@
   </div>
 
   <div class="reviewphone">
-    <img [src]="currentImages['reviewphone']" alt="" />
+    <img [src]="currentImages['phonetlfimage']" alt="" />
 
   </div>
 </div>
