--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -220,7 +220,7 @@
         </p>
         <h1>{{ "depositos" | translate }}</h1>
         <div class="texto">
-          <p>{{ "optimiza" | translate }}tususuarios<br /><br /></p>
+          <p>{{ "optimiza" | translate }}<br /><br /></p>
         </div>
         <div class="botones">
          
@@ -233,12 +233,9 @@
               "sugerencias" | translate
             }}</span>
          
-            <span class="TitleBold3">{{
-              "soporterespuestas" | translate
-            }}</span>
           <div class="division">
             <span class="TitleBold3">Open AI</span>
-            <span class="TitleBold3">CloudFlrare</span>
+            <span class="TitleBold3">CloudFlare</span>
             
               <span class="TitleBold3">{{ "promociones" | translate }}</span>
             
@@ -279,7 +276,7 @@
             ><br />
             {{ "unmensajerapido" | translate }}
             <br /><br />
-            {{ "esproceso" | translate }}
+            {{ "esteproceso" | translate }}
           </p>
         </div>
         <div class="completebutton">
